# ugraphs

./: Cargo.toml  README.md
src/: edge.rs  lib.rs  node.rs  ops.rs  testing.rs
src/algo/: bipartite.rs  bridges.rs  connectivity.rs  cuthill_mckee.rs  distance_pairs.rs  matching.rs  mod.rs  network_flow.rs  partition.rs  path_iterator.rs  subgraph.rs  traversal.rs  vertex_cuts.rs
src/gens/: gnm.rs  gnp.rs  mod.rs  mst.rs  rhg.rs  substructures.rs
src/io/: dot.rs  edge_list.rs  header.rs  metis.rs  mod.rs
src/repr/: csr.rs  digest.rs  directed.rs  mod.rs  neighborhood.rs  undirected.rs
src/utils/: geometric.rs  map.rs  mod.rs  multi_traits.rs  node_mapper.rs  partition.rs  set.rs  set_map.rs  sliced_buffer.rs
