[package]
name = "graphs"
authors = ["Lukas Geis <lukas.geis@ae.cs.uni-frankfurt.de", "Johannes Meintrup <johannes.meintrup@mni.thm.de>", "Manuel Penschuck <mpenschuck@ae.cs.uni-frankfurt.de>"]
version = "0.1.0"
edition = "2024"

[features]
# Default features
default = []
# Default (unstable) features when `nightly` is enabled
nightly_default = []

[dependencies]
digest = "0.10.7"
fxhash = "0.2.1"
itertools = "0.14.0"
log = "0.4.27"
num = "0.4.3"
rand = "0.9.1"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
sha2 = "0.10.9"
smallvec = "1.15.1"
stream_bitset = { path="stream-bitset" }
structopt = "0.3.26"
